feat: se añade obtener todos las instancias mensuales
